# AudioTools

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/audiotools/filters/: hello.hpp
source/filters/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt
tests/filters/: CMakeLists.txt  hello_test.cpp
